client/web/styles.css
@import url(https://fonts.googleapis.com/css?family=Roboto);
/* GENERAL */

html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  background-color: #ffffff;
}

img {
  user-select: none;
}

/* ALERTS */
#alerts {
  position: fixed;
  margin-left: 30%;
  width: 40%;
}

.Alert {
  border-radius: 5px;
  border-style: solid;
  margin-bottom: 3px;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 1px;
  padding-bottom: 1px;
}

.success {
  border-color: #009200;
  background-color: #94ff86;
}

.warning {
  border-color: #d4d400;
  background-color: #ffff70;
}

.error {
  border-color: #ca0000;
  background-color: #ff4b4b; 
}

.closeWindow {
  width: 20px;
  height: 20px;
  cursor: pointer;
  float: right;
}

/* MODAL */

#modal {
  justify-content: center;
  position: fixed;
  padding: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  z-index: 100;
}

#screenCover {
  position: fixed;
  background-color: #000000;
  opacity: 0.5;
  width: 100%;
  height: 100%;
}

.modalMessage {
  margin: auto;
  padding: 32px;
  background-color: #fafafa;
  border-radius: 4px;
  min-width: 25%;
  z-index: 1;
}

.modalMessage .title {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 8px;
}

.modalMessage .inputs div {
  padding: 8px 0;
}

.modalMessage .inputs div span {
  margin-right: 6px;
}

.modalMessage .inputs div textarea {
  display: block;
  padding: 6px;
  border: 1px solid #aaaaaa;
  border-radius: 4px;
  width: calc(100% - 12px);
  margin-top: 6px;
}

.modalMessage .end {
  text-align: center;
}

.modalMessage .inputs .statusDropdown {
  padding: 0;
}

.modalMessage .inputs .statusDropdown .options {
  margin-top: -8px;
  padding: 8px;
  max-height: 29%;
  overflow: auto;
}

.editMenu .errors {
  color: #fc4949;
  font-size: 14px;
  margin-bottom: 5px;
}

/* PARTS */
#newTopLevelPart {
  margin: 13px 6px 6px 4px !important;
}

#newTopLevelPart:hover, .sortButton:hover {
  cursor: pointer;
}

.sortButton {
  border: black solid 1px;
  border-radius: 5px;
  background-color: #f0f0f0;
  padding: 3px;
  margin: 12px 6px 6px 4px;
  float:left;
}

#partsList {
  margin-left: 5px;
  margin-right: 10px;
}

.part {
  font-size: 20px;
  height: 28px;
  margin-top: 3px;
  padding-top: 3px;
  border-color: #aaaaaa;
  border-radius: 5px;
  border-style: solid;
  border-width: 1px;
  background-color: #f0f0f0;
  overflow: hidden;
}

.part span {
  margin-right: 12px;
}

.part .description {
  margin-left: 50px;
  font-size: 15px;
  text-align: center;
  width: 100%;
}

.part:hover, #newPart:hover {
  background-color: #dddddd;
  cursor: pointer;
}

.part .icon {
  width: 10px;
  height: 10px;
  padding-left: 5px;
  padding-right: 5px;
}

.disclosureTri {
  cursor: pointer;
}

.part .statusDropdown {
  float: right;
}

.part .new {
  float: right;
}

.part .new, #newTopLevelPart {
  margin-right: 15px;
  margin-left: 2px;
  border-radius: 5px;
  border-style: solid;
  border-width: 1px;
  padding: 2px;
  background-color: #f0f0f0;
}

.part .new:hover, .part .delete:hover, #newTopLevelPart:hover {
  background-color: #ffffff;
  cursor: pointer;
}

.part .delete {
  float: right;
  margin-right: 15px;
  margin-left: 2px;
  border-radius: 5px;
  border-style: solid;
  border-width: 1px;
  padding: 2px;
  background-color: #f0f0f0;
}

/* STATUS */

.status .color {
  display: inline-block;
  width: 10px;
  height: 10px;
  max-height: 10px;
  max-width: 10px;
  margin-left: 3px;
  border-radius: 100%;
  border-style: solid;
  border-width: 1px;
  padding: 0 !important;
}

.statusDropdown .selected {
  margin-right: 10px;
  padding-right: 3px;
  padding-left: 3px;
  padding-top: 1px;
  border-radius: 10px;
}

.statusDropdown .options {
  font-size: 12px;
  position: absolute;
  padding: 8px;
  border: 1px solid #aaaaaa;
  border-radius: 4px;
  background-color: #f0f0f0;
  text-align: right;
}

.statusDropdown .label {
  margin-right: 4px;
}

.statusDropdown .label:hover {
  cursor: pointer;
}

.statusDropdown .options .status {
  padding: 4px;
  border-radius: 4px;
}

.statusDropdown .options .status:hover {
  background-color: #dddddd;
  cursor: pointer;
}

